solve align issue on account layout page

--- a/src/pages/account/AccountsLayout/AccountsLayout.scss
+++ b/src/pages/account/AccountsLayout/AccountsLayout.scss
@@ -19,7 +19,7 @@
     .al-container {
       flex-direction: row;
       justify-content: space-between;
-      align-items: flex-start;
+      align-items: flex-end;
       .accounts-outlet-container {
         width: 50%;
         max-width: 704px;
